--- a/1/Examples/Fading Demo/en.lproj/iCarouselExampleViewController.xib
+++ b/1/Examples/Fading Demo/en.lproj/iCarouselExampleViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="800" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="iCarouselExampleViewController">
             <connections>
+                <outlet property="btn" destination="H9j-rW-iR1" id="b0F-Wi-mqd"/>
                 <outlet property="carousel" destination="8" id="9"/>
                 <outlet property="view" destination="6" id="7"/>
             </connections>
@@ -16,35 +17,40 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="background.png" id="21">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="488"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                </imageView>
-                <view contentMode="scaleToFill" id="8" userLabel="iCarousel" customClass="iCarousel">
+                <view clipsSubviews="YES" contentMode="scaleToFill" id="Ccc-CS-Otv">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="H9j-rW-iR1">
-                            <rect key="frame" x="116" y="438" width="88" height="22"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="go to 5"/>
+                        <view contentMode="scaleToFill" id="8" userLabel="iCarousel" customClass="iCarousel">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <connections>
-                                <action selector="onTouch5:" destination="-1" eventType="touchUpInside" id="BpR-DG-4ML"/>
+                                <outlet property="dataSource" destination="-1" id="10"/>
+                                <outlet property="delegate" destination="-1" id="11"/>
                             </connections>
-                        </button>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="10"/>
-                        <outlet property="delegate" destination="-1" id="11"/>
-                    </connections>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="H9j-rW-iR1">
+                    <rect key="frame" x="116" y="21" width="88" height="22"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="go to 5"/>
+                    <connections>
+                        <action selector="onTouch5:" destination="-1" eventType="touchUpInside" id="BpR-DG-4ML"/>
+                    </connections>
+                </button>
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10" id="jdt-Lm-LWM">
+                    <rect key="frame" x="18" y="444" width="284" height="34"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <connections>
+                        <action selector="onValueChanged:" destination="-1" eventType="valueChanged" id="6zZ-0x-pCt"/>
+                    </connections>
+                </slider>
             </subviews>
             <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
-    <resources>
-        <image name="background.png" width="50" height="468"/>
-    </resources>
 </document>
