--- a/1/Examples/Fading Demo/en.lproj/iCarouselExampleViewController.xib
+++ b/1/Examples/Fading Demo/en.lproj/iCarouselExampleViewController.xib
@@ -14,12 +14,12 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="6">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" id="Ccc-CS-Otv">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <view contentMode="scaleToFill" id="8" userLabel="iCarousel" customClass="iCarousel">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
@@ -42,15 +42,18 @@
                     </connections>
                 </button>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10" id="jdt-Lm-LWM">
-                    <rect key="frame" x="18" y="444" width="284" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="18" y="521" width="284" height="34"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <connections>
+                        <action selector="onTouchUp:" destination="-1" eventType="touchUpInside" id="KYI-hH-oub"/>
+                        <action selector="onTouchUpOut:" destination="-1" eventType="touchUpOutside" id="1Ww-2a-v6X"/>
                         <action selector="onValueChanged:" destination="-1" eventType="valueChanged" id="6zZ-0x-pCt"/>
                     </connections>
                 </slider>
             </subviews>
             <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
 </document>
